<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/reserve">

    <fragment
        android:id="@+id/reserve"
        android:name="com.example.myapplication.ui.reserve.reserveFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_office" />

    <fragment
        android:id="@+id/delete"
        android:name="com.example.myapplication.ui.delete.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_delete" />

    <fragment
        android:id="@+id/history"
        android:name="com.example.myapplication.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/active"
        android:name="com.example.myapplication.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.myapplication.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.myapplication.ui.office.officeFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_office" />
</navigation>